examples/misc/error/compilation/eval_failwith.bfml
let _ = failwith "Failed"

let main = $